# venvoy

./: .gitignore  .pypirc.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCUSSIONS_WELCOME_POST.md  DOCKER_CLEANUP_GUIDE.md  DOCKER_PUBLISHING_GUIDE.md  LICENSE  Makefile  PYPI_SETUP_SUMMARY.md  README.md  SECURITY.md  fix-bashrc.sh  install.ps1  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  uninstall.ps1  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-images.yml  publish-pypi.yml  test-pypi.yml
architectural_baseline/: README.md  results.txt  results.ubuntu2404.python311.amd64.host.txt  results.ubuntu2404.python311.amd64.podman.txt  test_architectural_differences.py
docker/: Dockerfile.base  Dockerfile.bootstrap  Dockerfile.combined  Dockerfile.env  Dockerfile.r  README.md  build-bootstrap.sh  build-r-amd64.sh  build-r-arm64.sh  build-r.sh  fix-host-home-entrypoint.sh  fix-host-home-permissions.sh  venvoy-entrypoint.sh
docs/: ARCHITECTURAL_DIFFERENCE_EXAMPLES.md  ARCHITECTURAL_STRATEGIES.md  BUILD_PROFILING.md  HPC_COMPATIBILITY.md  PUBLISHING.md
examples/: demo.py  hpc_compatibility_demo.py
scripts/: README.md  build-and-push-bootstrap.sh  build-and-push.sh  build-bootstrap-amd64.sh  build-bootstrap-arm64.sh  build-bootstrap.sh  build-python-amd64.sh  build-python-arm64.sh  build-python-r.sh  build-python.sh  build-r-amd64.sh  build-r-arm64.sh  build-r.sh  cleanup-docker-tags.sh  diagnose-macos-path.sh  fix-macos-path.sh  profile-build.sh  publish.py  test-upgrade-fix.sh
src/venvoy/: __init__.py  cli.py  container_manager.py  core.py  docker_manager.py  platform_detector.py
src/venvoy/templates/: __init__.py  package_monitor.py
tests/: __init__.py  test_basic.py  test_platform_detector.py
venvoy-test/: pyvenv.cfg
